# suvat-solver

./: README.md  pyproject.toml  suvatcli.py
suvat/: __init__.py  suvat.py
suvatsolver/: __init__.py  cli.py  suvat.py  util.py
tests/: test_suvat.py
