[tool.poetry]
name = "suvatsolver"
version = "0.1.0"
description = ""
authors = ["Jonathan Rudman <jonathan.rudman@live.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.3.0"

[tool.poetry.scripts]
suvat-cli = "suvatsolver.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
