[tool.poetry]
name = "suvatsolver"
version = "0.1.0"
description = ""
authors = ["Jonathan Rudman <jonathan.rudman@live.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.3.0"
pytest = "^7.4.1"

[tool.poetry.scripts]
suvatsolver = "suvatsolver.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
