[tool.poetry]
name = "suvatsolver"
version = "0.1.1"
description = "Solve SUVAT equations to model projectile motion."
authors = ["Jonathan Rudman <jonathan.rudman@live.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"

[tool.poetry.scripts]
suvatsolver = "suvatsolver.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
